# diploma_project

./: .env.sample  docker-compose.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/cmp_core/: celery_app.py  main.py
backend/cmp_core/api/v1/: audit.py  auth.py  azure.py  ec2.py  members.py  projects.py  users.py
backend/cmp_core/core/: config.py  db.py  db_sync.py  deps.py  security.py
backend/cmp_core/lib/: grafana.py  pulumi_adapter.py  pulumi_ec2.py  pulumi_project.py
backend/cmp_core/lib/providers/: aws.py  azure.py
backend/cmp_core/models/: __init__.py  audit.py  base.py  mixins.py  project.py  project_member.py  refresh_token.py  resource.py  role.py  user.py
backend/cmp_core/schemas/: audit.py  auth.py  azure.py  ec2.py  member.py  project.py  user.py
backend/cmp_core/services/: audit.py  auth.py  azure_vm.py  ec2.py  member.py  project.py  user.py
backend/cmp_core/tasks/: __init__.py  azure.py  ec2.py  pulumi.py
backend/migrations/: env.py
backend/migrations/versions/: 4c1c942b017b_init_schema.py  6919f27d20f2_audit_event_user_id_set_to_nullable.py  6ef566463c8e_add_role_id_to_users.py  74ae5cb9a0bf_add_project_id_to_audit_events.py  7db9c2a697c1_update_resource_state_enum_and_default.py  883cf21d27ee_fix_default_role_to_viewer.py  c9f902273885_add_pending_to_resourcestate.py  e6d2bffdd1ee_add_created_by_to_resources.py  f1fbb32df71b_add_terminating_to_resourcestate.py  fbaa9eb83266_increase_audit_event_action_length.py
backend/tests/: test_healthcheck.py
nginx-ingress/: nginx.conf
(+31 files in other folders)
